--- a/style.css
+++ b/style.css
@@ -31,16 +31,38 @@ a {
     align-items: center;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .one {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.section.one .block {
+.section.one .features {
     display: flex;
-    margin: auto;
-    gap: 20px;
+    gap: 10px;
+    padding: 20px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    padding: 10px;
+    text-align: center;
+}
+
+.square {
+    outline: 3px solid #3882f6;
+    height: 150px;
+    width: 150px;
+    border-radius: 10px;
 }
 
 .two {
