--- a/style.css
+++ b/style.css
@@ -2,10 +2,19 @@ body {
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
+    padding: 0px;
+    margin: 0;
 }
 
 a {
     text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.logo {
+    color: #F9FAF8;
+    font-size: 24px;
 }
 
 .links ul {
@@ -19,20 +28,57 @@ a {
     justify-content: flex-start;
 }
 
+.header,
+.hero,
+.section,
+.footer {
+    padding: 10px 150px;
+}
+
 .header {
+    background-color: #1F2937;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 5px;
+    border: none;
+    padding: .5em 2em;
+    font-size: 17px;
+}
+
 .hero {
+    background-color: #1F2937;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    padding-bottom: 70px;
+}
+
+.left-column > h1 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    margin-bottom: 0;
+}
+
+.left-column > h2 {
+    font-size: 18px;
+    color: #E5E7EB;
+    font-weight: 200;
+}
+
+.right-column {
+    display: flex;
+    justify-content: flex-end;
 }
 
 img {
-    max-width: 100%;
+    max-width: 75%;
     height: auto;
 }
 
@@ -42,10 +88,17 @@ img {
     align-items: center;
 }
 
-.section.one .features {
+.one > h1 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    margin-bottom: 0;
+}
+
+.section.one > .features {
     display: flex;
     gap: 10px;
-    padding: 20px;
+    padding: 40px;
 }
 
 .card {
@@ -66,18 +119,58 @@ img {
 }
 
 .two {
+    background-color: #E5E7EB;
     flex-direction: column;
+    padding: 3rem 12rem;
+}
+
+.two > h1 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 300;
+}
+
+.two > h2 {
+    font-size: 25px;
+    text-align: end;
+}
+
+.three {
+    display: flex;
+    padding: 5rem 2rem;
+    justify-content: center;
 }
 
 .banner {
+    background-color: #3882f6;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin: auto;
+    color: #F9FAF8;
+    width: 70%;
+    padding: 2rem 4rem;
+}
+
+.banner > button {
+    outline-color: #F9FAF8;
+    outline-width: 2px;
+    outline-style: solid;
+}
+
+.left > h1 {
+    padding: 0;
+    margin: 0;
+}
+
+.left > p {
+    margin: 0;
+    font-weight: 200;
 }
 
 .footer {
+    background-color: #1F2937;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #F9FAF8;
 }
